src/test/ui/regions/regions-outlives-scalar.stderr
error: compilation successful
  --> $DIR/regions-outlives-scalar.rs:13:1
   |
LL | fn main() { } //~ ERROR compilation successful
   | ^^^^^^^^^^^^^

error: aborting due to previous error

